--- a/back/.env
+++ b/back/.env
@@ -1,19 +1,8 @@
-# Backend port (default: 4000)
 PORT=4000
-
-# Ethereum JSON-RPC URL
-# Local Hardhat:   http://127.0.0.1:8545
-# Sepolia testnet: https://rpc.sepolia.org
-# Infura Sepolia:  https://sepolia.infura.io/v3/YOUR_INFURA_KEY
 RPC_URL=http://127.0.0.1:8545
-
-# Deployed Hashmark contract address
-CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
-
-# Server-side wallet private key (used for authenticateVideo transactions)
-# Leave empty to disable server-side authentication; the frontend will need MetaMask.
-# NEVER commit a real private key.
+CONTRACT_ADDRESS=0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
 PRIVATE_KEY=
-
-# Frontend origin for CORS (comma-separated for multiple)
 CORS_ORIGIN=http://localhost:5173
+FRONTEND_URL=http://localhost:5173
+SEPOLIA_RPC_URL=
+DEPLOY_PRIVATE_KEY=
