--- a/back/.env.example
+++ b/back/.env.example
@@ -7,13 +7,20 @@ PORT=4000
 # Infura Sepolia:  https://sepolia.infura.io/v3/YOUR_INFURA_KEY
 RPC_URL=http://127.0.0.1:8545
 
-# Deployed Hashmark contract address
-CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+# Deployed Hashmark contract address (auto-filled by scripts/deploy.js)
+CONTRACT_ADDRESS=
 
-# Server-side wallet private key (used for authenticateVideo transactions)
-# Leave empty to disable server-side authentication; the frontend will need MetaMask.
+# Server-side wallet private key — OPTIONAL
+# If left empty, authentication is done client-side via MetaMask (recommended).
 # NEVER commit a real private key.
 PRIVATE_KEY=
 
+# For contract deployment to Sepolia testnet
+SEPOLIA_RPC_URL=
+DEPLOY_PRIVATE_KEY=
+
 # Frontend origin for CORS (comma-separated for multiple)
 CORS_ORIGIN=http://localhost:5173
+
+# Frontend URL used when generating QR code verify links
+FRONTEND_URL=http://localhost:5173
