--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "restart": "fuser -k 4000/tcp 2>/dev/null; sleep 1; node server.js",
     "dev": "node --watch server.js",
     "node:local": "anvil --chain-id 1337 --allow-origin '*'",
     "deploy:local": "node scripts/deploy.js local",
@@ -20,6 +21,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4"
   }
 }
